overflow bug fixed

--- a/static/css/category.css
+++ b/static/css/category.css
@@ -15,6 +15,7 @@
   margin: 0;
   padding: 0;
   overflow-x: scroll;
+  overflow: auto;
   white-space: nowrap;
   /*display: inline-block;*/
 }
